Permissions to resources for editing and deleting, exceptions have been fixed. AuthenticationUtil class added.